Allow choosing groups for an invitee when you are sending them an invitation e-mail.

--- a/dumbhippo/trunk/server/web/css2/invitation-positions.css
+++ b/dumbhippo/trunk/server/web/css2/invitation-positions.css
@@ -24,6 +24,10 @@
 	width:			309px;
 }
 
+#dhContentColumn #dhSuggestedGroupsWithInvitationDiv {
+	width:			309px;
+}
+
 #dhContentColumn .dh-zone-box .dh-invitation .dh-address {
 	padding-right:	10px;
 }
