update the colors of the section headers to match to the mockup

--- a/dumbhippo/trunk/server/web/css2/search.css
+++ b/dumbhippo/trunk/server/web/css2/search.css
@@ -28,3 +28,18 @@
 #dhContentColumn .dh-zone-box .dh-item-with-numeral .dh-title {
 	font-size:		12px;
 }
+
+#dhPeople {
+	color:			#84569b;
+	background-color:	inherit;
+}
+
+#dhMusicRadar {
+	color:			#36aae8;
+	background-color:	inherit;
+}
+
+#dhLinkSwarm {
+	color:			#f16d1c;
+	background-color:	inherit;
+}
