--- a/dumbhippo/trunk/server/web/css2/music.css
+++ b/dumbhippo/trunk/server/web/css2/music.css
@@ -6,6 +6,11 @@
 	background-color:		#AED7ED;
 }
 
+.dh-sidebar-box .dh-music-radar-options {
+	margin-top: 			3px;
+	margin-left:			3px;
+}
+
 #dhBeaconSample {
 	margin-bottom: 10px;
 }
