Replace PostingBoard.parsePostUrl with HttpMethodsBean.parseUserEnteredUrl Make IdentitySpider.getLink take a URL object so there are no validation issues Change dh.server.doXmlMethod to allow a null serverErrorFunc which will feed server errors to the other error func; also change caps to match rest of file Add some unfinished jsp/javascript code to add feeds to /group-account

--- a/dumbhippo/trunk/server/web/css2/group-account-positions.css
+++ b/dumbhippo/trunk/server/web/css2/group-account-positions.css
@@ -13,3 +13,11 @@
 #dhContentColumn #dhAboutGroupEntry {
 	width:			252px;
 }
+
+tr.dh-feed-spacer {
+	height:			5px;
+}
+
+#dhFeedEntry {
+	margin-right:	10px;
+}
