Factor out the idea of a "popup" and put a stub feedPopup on the groups page. dh.photochooser not yet ported to popup.js because I want to checkpoint in svn first. Fix generated XML from feedpreview HttpMethod Add feed-related icons List feeds in rough form on /group-account (but no way to add them yet)

--- a/dumbhippo/trunk/server/web/css2/group-account.css
+++ b/dumbhippo/trunk/server/web/css2/group-account.css
@@ -2,4 +2,5 @@
 @IMPORT url("site.css");
 @IMPORT url("group-account-positions.css");
 @IMPORT url("photo-chooser.css");
+@IMPORT url("feed-popup.css");
 
