--- a/dumbhippo/trunk/server/web/css2/site-positions.css
+++ b/dumbhippo/trunk/server/web/css2/site-positions.css
@@ -411,3 +411,56 @@ div.dh-notification {
 	padding:		5px;
 	margin-bottom:	5px;
 }
+
+.dh-popup {
+	position:		absolute;
+}
+
+/* For the nested div onion creating the borders of the popup,
+ * position: relative would make more sense but seems to 
+ * confuse firefox into drawing the background color of the outermost
+ * div over the top and bottom of the chooser.
+ * Using float: left fixes firefox, but creates the "double margin" 
+ * bug in IE, which is fixed with display:inline
+ * (inline is invalid on floats, but gets ignored except
+ * to mysteriously fix the IE double margin bug)
+ */
+
+.dh-popup .dh-border {
+	/* hacks! see comment above */
+	float:				left;
+	display:			inline;
+	/* end hacks */
+	margin-left:		0px;
+	margin-top:			0px;
+	/* background of parent is drop shadow */
+	margin-bottom:		1px;
+}
+
+.dh-popup .dh-content-padding {
+	/* hacks! see comment above */
+	float:				left;
+	display:			inline;
+	/* end hacks */
+	/* background of parent is the black border */
+	margin-top:			1px;
+	margin-bottom:		1px;
+	margin-left:		1px;
+}
+
+.dh-popup .dh-content {
+	/* hacks! see comment above */
+	float:				left;
+	display:			inline;
+	/* end hacks */	
+	margin-top:			10px;
+	margin-left:		10px;
+	/* IE seems to ignore margin-bottom, I don't know why,
+	 * since we don't set any heights padding works too
+	 */
+	padding-bottom:		10px;
+}
+
+.dh-popup .dh-content .dh-title {
+	position:			relative;
+}
