--- a/dumbhippo/trunk/server/web/css2/group-account-positions.css
+++ b/dumbhippo/trunk/server/web/css2/group-account-positions.css
@@ -18,6 +18,10 @@ tr.dh-feed-spacer {
 	height:			5px;
 }
 
+.dh-feed-status-icon {
+	margin-right:	10px;
+}
+
 #dhFeedEntry {
 	margin-right:	10px;
 }
