--- a/dumbhippo/trunk/server/web/css2/who-are-you.css
+++ b/dumbhippo/trunk/server/web/css2/who-are-you.css
@@ -2,13 +2,8 @@
 @IMPORT url("site.css");
 @IMPORT url("who-are-you-positions.css");
 
-.dh-login-type-header {
-	font-weight: bold;
-	font-size: 14px;
-}
-
-.dh-login-text {
-	font-size: 12px;
+#dhContentColumn {
+	font-size: 12px; /* for inheritance by text in the zone box */
 }
 
 #dhLoginNotification {
