adding music radar promo / learn more links to appropriate pages

--- a/dumbhippo/trunk/server/web/css2/site.css
+++ b/dumbhippo/trunk/server/web/css2/site.css
@@ -317,6 +317,10 @@ img {
 	text-align: left;
 }
 
+.dh-music-radar-promo {
+	font-size:		14px;
+}
+
 #dhBeaconSample {
 	border: 1px solid black;	
 }
