Remove unused ViewPersonPage class Add "as others would see" property to PersonPage, use it on /person, changes the sidebar to appear as others would see Add a "this is how others would see" banner to top of /person if looking at your own page Don't use who-are-you.css on we-miss-you, fixing ugliness

--- a/dumbhippo/trunk/server/web/css2/site-positions.css
+++ b/dumbhippo/trunk/server/web/css2/site-positions.css
@@ -48,18 +48,29 @@ form {
 	overflow:		hidden;
 }
 
-.dh-body-with-sidebar #dhPageHeader {
+#dhPageTopMessage {
+	position:		relative;
+	left:			0px;
+	top:			0px;
+	margin-bottom:	12px;
+}
+
+#dhPageTopMessageContent {
+	margin:			10px;	
+}
+
+.dh-body-with-sidebar #dhPageHeader, .dh-body-with-sidebar #dhPageTopMessage {
 	width:			710px;
 }
 
-.dh-body-without-sidebar #dhPageHeader {
+.dh-body-without-sidebar #dhPageHeader, .dh-body-without-sidebar #dhPageTopMessage {
 	width:			500px;
 }
 
 .dh-main-page #dhPageHeader {
 	width:			710px;	
 }
-	
+
 .dh-header-short {
 	height:			65px;
 }
