add group feed listing to the group main page, need to get hp's favicon code from the way back machine in order to match the mockups exactly

--- a/dumbhippo/trunk/server/web/css2/group-account.css
+++ b/dumbhippo/trunk/server/web/css2/group-account.css
@@ -1,5 +1,6 @@
 @CHARSET "UTF-8";
 @IMPORT url("site.css");
+@IMPORT url("group.css");
 @IMPORT url("group-account-positions.css");
 @IMPORT url("photo-chooser.css");
 @IMPORT url("feed-popup.css");
