--- a/dumbhippo/trunk/server/web/css2/site.css
+++ b/dumbhippo/trunk/server/web/css2/site.css
@@ -76,11 +76,7 @@ img {
 	color:		#60B635;
 }
 
-.dh-color-where-im-at-foreground {
-	color:		#84569B;
-}
-
-.dh-color-group-foreground, .dh-color-account-foreground, .dh-color-artists-foreground .dh-color-system-foreground {
+.dh-color-group-foreground, .dh-color-account-foreground, .dh-color-artists-foreground .dh-color-system-foreground, .dh-color-where-im-at-foreground {
 	color:		#000000;
 }
 
