add a presence thingy on /person as in Mike's mockup

--- a/dumbhippo/trunk/server/web/css2/site-positions.css
+++ b/dumbhippo/trunk/server/web/css2/site-positions.css
@@ -210,7 +210,7 @@ input.dh-text-input {
 	margin-bottom:		3px;
 }
 
-.dh-compact-item .dh-next-to-image .dh-action-link {
+.dh-compact-item .dh-next-to-image .dh-action-link, .dh-compact-item .dh-next-to-image .dh-presence {
 	margin-top:			2px;
 }
 
