--- a/dumbhippo/trunk/server/web/css2/site.css
+++ b/dumbhippo/trunk/server/web/css2/site.css
@@ -197,6 +197,10 @@ img {
 	font-size:			14px;
 }
 
+.dh-compact-item .dh-next-to-image .dh-presence {
+	font-size:			11px;
+}
+
 .dh-profile-box .dh-compact-item .dh-next-to-image .dh-action-link {
 	font-size:			12px;
 }
