Fix a couple warnings Split out /person-positions.css so I can tell what's going on Fix dht:errorPage, had multiple bugs of unknown age

--- a/dumbhippo/trunk/server/web/css2/person.css
+++ b/dumbhippo/trunk/server/web/css2/person.css
@@ -1,5 +1,6 @@
 @CHARSET "UTF-8";
 @IMPORT url("site.css");
+@IMPORT url("person-positions.css");
 
 #dhContentColumn .dh-zone-box .dh-hated-place {
 	color:				#cc0033;
@@ -20,65 +21,21 @@
 	font-size:			12px;
 }
 #dhContentColumn .dh-zone-box .dh-thumbnail-box-border, #dhContentColumn .dh-zone-box .dh-rss-box-border {
-	position:				relative;
-	width:				478px;
-	margin-top:			10px;
-	margin-bottom:		10px;
 	background-color:	#cccccc;
 	color:				inherit;
-	padding:				1px;
 }
 #dhContentColumn .dh-zone-box .dh-thumbnail-box, #dhContentColumn .dh-zone-box .dh-rss-box {
-	position:				relative;
 	font-size:			12px;
 	color:				#000000;
 	background-color:	#f3f3f3;
-	padding:				0px;
-	margin:				0px;
 }
-#dhContentColumn .dh-zone-box .dh-thumbnail-meta, #dhContentColumn .dh-zone-box .dh-rss-meta {
-	position:				relative;
-	height:				26px;
-	padding:				6px;
-}
-#dhContentColumn .dh-zone-box .dh-thumbnail-service, #dhContentColumn .dh-zone-box .dh-rss-service {
-	position:				absolute;
-}
+
 #dhContentColumn .dh-zone-box .dh-thumbnail-status, #dhContentColumn .dh-zone-box .dh-rss-status {
 	color:				#666666;
 	background-color:	inherit;
-	position:				absolute;
-	right:				6px;
-}
-#dhContentColumn .dh-zone-box .dh-thumbnail-photos {
-	position:				relative;
-	width:				476px;
-	padding:				10px;
-	padding-top:			0px;
-}
-#dhContentColumn .dh-zone-box .dh-thumbnail-photo {
-	float:				left;
-	margin:				0;
-	margin-left:			10px;
-	margin-right:			10px;
-	width:				75px;
-	padding:				0px;
-}
-#dhContentColumn .dh-zone-box .dh-thumbnail-photo-first {
-	margin:				0 10px 0 0;
-}
-#dhContentColumn .dh-zone-box .dh-thumbnail-photo-last {
-	margin:				0 0 0 10px;
-}
-#dhContentColumn .dh-zone-box .dh-thumbnail-photo img {
-	border:				none;
-	margin:				0;
 }
 #dhContentColumn .dh-zone-box .dh-thumbnail-title {
 	font-size:			10px;
-	width:				75px;
-	overflow:			hidden;
-	text-align:			center;
 }
 #dhContentColumn .dh-zone-box .dh-thumbnail-title a {
 	text-decoration:		underline;
