--- a/dumbhippo/trunk/server/web/css2/download.css
+++ b/dumbhippo/trunk/server/web/css2/download.css
@@ -7,6 +7,14 @@
 	font-size: 18px;
 }
 
+#dhMustAccept {
+	background-color:	#ffffcc;
+	color:				#cc0033;
+	padding:            5px;
+	font-size:          12px;
+	margin-bottom:      10px;
+}
+
 .dh-download-purple {
 	color: #8c509d;
 	font-weight: bold;
