--- a/dumbhippo/trunk/server/web/css2/download.css
+++ b/dumbhippo/trunk/server/web/css2/download.css
@@ -10,27 +10,51 @@
 #dhMustAccept {
 	background-color:	#ffffcc;
 	color:				#cc0033;
-	padding:            5px;
 	font-size:          12px;
-	margin-bottom:      10px;
 }
 
 .dh-download-purple {
 	color: #8c509d;
-	font-weight: bold;
+}
+
+#dhDownloadInfoAreaContainer {
+	border: 1px solid black;
 }
 
 .dh-download-separator {
 	background: black;
 }
 
-.dh-download-instructions {
+.dh-download-welcome-information, .dh-download-instruction {
+	font-size: 16px;
+}
+
+.dh-download-information {
 	font-size: 14px;
-	font-weight: bold;
+}
+
+.dh-download-more-information {
+	font-size: 12px;
 }
 
 #dhDownloadInstructionsHeader {
 	font-size: 18px;
+	font-weight: bold;
+}
+
+.dh-download-instruction-number {
+	font-size: 16px;
+ 	font-weight: bold;
+}
+
+.dh-accept-terms-box-warning {
+	background-color:	#ffffcc;
+	border:				1px solid #cc0033;
+	-moz-border-radius:	5px;
+}
+
+.dh-download-accepted {
+	color:	#666666;
 }
 
 .dh-download-product {
@@ -38,45 +62,15 @@
 	font-weight: bold;
 }
 
-.dh-download-info-area-header {
-	font-size: 16px;
-}
-
-.dh-download-accepted {
-	color:	#666666;
-}
-
-.dh-download-more-information {
-	font-size: 12px;
-}
-
-.dh-download-other-options {
-	font-size: 10px;
-}
-
 .dh-download-product-disabled {
 	color: #cccccc;
 	cursor: default;
 }
 
-.dh-accept-terms-box-normal .dh-accept-terms-warning {
-	display: none;
-}
+#dhDownloadFooter {
+	font-size: 10px;
+} 
 
-.dh-accept-terms-box-warning {
-	background-color:	#ffffcc;
-	border:				1px solid #cc0033;
-	padding-top:		10px;
-	padding-bottom:		10px;
-	-moz-border-radius:	5px;
-}
-
-.dh-accept-terms-box-warning .dh-accept-terms-warning {
-	display: 			block;
-	color:				#cc0033;
-	font-weight:		bold;
-}
-
-#dhDownloadInfoAreaContainer {
-	border: 1px solid black;
+.dh-download-information a:visited, .dh-download-more-information a:visited, .dh-download-instruction a:visited, .dh-download-footer-text a:visited {
+	color:     blue;
 }
