--- a/dumbhippo/trunk/server/web/css2/download-positions.css
+++ b/dumbhippo/trunk/server/web/css2/download-positions.css
@@ -29,6 +29,7 @@
     margin-top:    0px;
     margin-bottom: 0px;
     margin-left:   17px;
+    padding-left:  0px;
 }
 
 .dh-download-information-image {
