use a different check mark with a png tag to avoid gray background in IE display a message related to Terms of Use on the account page, when needed link to appropriate anchors on the download help page for different download questions

--- a/dumbhippo/trunk/server/web/css2/account-positions.css
+++ b/dumbhippo/trunk/server/web/css2/account-positions.css
@@ -48,3 +48,8 @@ tr.dh-email-address-spacer {
 #dhEmailEntry {
 	margin-right:	10px;
 }
+
+#dhTermsOfUseNote {
+	padding:            5px;
+	margin-bottom:      10px;
+}
