Display the coordinates and the point on the graph as you mouse over the statistics graph.

--- a/dumbhippo/trunk/server/web/css2/statistics.css
+++ b/dumbhippo/trunk/server/web/css2/statistics.css
@@ -35,5 +35,9 @@
 
 .dh-graph canvas {
 	background: #eeeecc; 
-	border: 1px solid #666666;
+}
+
+.dh-coordinates {
+	background: #d5c5d5;
+	text-align: center;
 }
