configjs.jsp: Add the server base URL as a global variable util.js chatwindow.js: Surround non-critical uses of window.external  with a try/catch so that we can test pages in IE. control.js: Make functional chatwindow.jsp chatwindow.js framer.jsp framer.js: Switch  /chatwindow and /framer over to the new control system. chatwindow.css chatwindow-positions.css chatwindow.js: Simplify  the handling of CSS classes for the person list on /chatwindow.

--- a/dumbhippo/trunk/server/web/css2/chatwindow-positions.css
+++ b/dumbhippo/trunk/server/web/css2/chatwindow-positions.css
@@ -80,6 +80,10 @@
     left:             7px;
 }
 
+.dh-chat-person-image a {
+	border:           0px;
+}
+
 .dh-chat-person-name {
 	position:         absolute;
 	top:              10px;
