--- a/dumbhippo/trunk/server/web/css2/person.css
+++ b/dumbhippo/trunk/server/web/css2/person.css
@@ -20,6 +20,12 @@
 	color:				blue;
 	font-size:			12px;
 }
+
+#dhContentColumn .dh-zone-box .dh-where-at-empty {
+	color:			#777777;
+	font-size:			12px;
+}
+
 #dhContentColumn .dh-zone-box .dh-thumbnail-box-border, #dhContentColumn .dh-zone-box .dh-rss-box-border {
 	background-color:	#cccccc;
 	color:				inherit;
