--- a/dumbhippo/trunk/server/web/css2/account.css
+++ b/dumbhippo/trunk/server/web/css2/account.css
@@ -18,8 +18,9 @@ div.dh-account-disabled-message {
 	font-size:		14px;
 }
 
-#dhTermsOfUseNote {
+#dhTermsOfUseNote, #dhFacebookNote {
 	background-color:	#ffffcc;
 	color:				#cc0033;
 	font-size:          12px;
+	font-weight:		bold;
 }
