--- a/dumbhippo/branches/cluster/server/web/css2/statistics.css
+++ b/dumbhippo/branches/cluster/server/web/css2/statistics.css
@@ -2,6 +2,15 @@
 
 body { font-family: sans-serif; }
 
+#dhHeaderTable {
+	table-layout: fixed;
+	width: 100%;
+}
+
+#dhRefreshCell {
+	text-align: right;
+}
+
 #dhHourSelector {
 	 text-align: right;
 	 font-size: 12px;
